Fix excess gap after placing Scheduler into the SctollView (T656716)

--- a/styles/widgets/base/scheduler.less
+++ b/styles/widgets/base/scheduler.less
@@ -779,6 +779,9 @@
         width: 100%;
         border-top: none;
 
+        // T656716
+        float: left;
+
         &.dx-scheduler-work-space-grouped:not(.dx-scheduler-agenda) {
             .dx-scheduler-all-day-title {
                 border-top: @SCHEDULER_BASE_BORDER;
